# crap

./: .gitignore  CMakeLists.txt  Doxyfile
headers/: ClottingFilter.hpp  Crap.hpp  Filter.hpp  Image.hpp  IsolationFilter.hpp  LineExtrusionFilter.hpp  crap.h
modules/: FindGiblib.cmake  FindImlib.cmake
sources/: ClottingFilter.cpp  Crap.cpp  Image.cpp  IsolationFilter.cpp  LineExtrusionFilter.cpp  crap.c
